updates and final fixes